add S3 storage for images
